Fix posible memory leaks, Add missing TRACE_ERR_OUT_OF_MEMORY err code

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -347,6 +347,8 @@ enum {
 	TRACE_ERR_NULL = -31,
 	/** Err with trace output file **/
 	TRACE_ERR_OUTPUT_FILE = -32,
+	/** ERR out of memory **/
+	TRACE_ERR_OUT_OF_MEMORY = -33,
 };
 
 /** Enumeration of DLTs supported by libtrace 
