--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -3724,74 +3724,286 @@ DLLEXPORT bool trace_get_wireless_antenna(void *linkptr,
 
 /*@}*/
 
+/* Destroy libtrace_meta_t structure
+ *
+ * @params libtrace_meta_t structure
+ * returns 1 on success, -1 on failure
+ */
 DLLEXPORT int trace_destroy_meta(libtrace_meta_t *result);
 
-DLLEXPORT libtrace_meta_t *trace_get_meta_option(libtrace_packet_t *packet, uint32_t section,
-        uint32_t option);
-
+/* Get the interface name/s for a meta packet.
+ * Must be destroyed with trace_destroy_meta().
+ *
+ * @params libtrace_packet_t meta packet.
+ * @returns Pointer to libtrace_meta_t structure containing all found interface names
+ * or NULL.
+ */
 DLLEXPORT libtrace_meta_t *trace_get_interface_name_meta(libtrace_packet_t *packet);
 
+/* Get the interface name for a meta packet.
+ * Note: ERF packets can contain multiple interfaces per meta packet. Use index to
+ * specify the interface index.
+ *
+ * @params libtrace_packet_t meta packet to extract the interface name from.
+ * @params A pointer to a character buffer to store the interface name in.
+ * @params The size of the buffer passed in.
+ * @params The interface index within the meta packet.
+ * @returns Pointer to the character buffer containing the interface name or NULL.
+ */
 DLLEXPORT char *trace_get_interface_name(libtrace_packet_t *packet, char *space, int spacelen,
 	int index);
 
+/* Get the interface MAC address/s for a meta packet.
+ * Must be destroyed with trace_destroy_meta().
+ *
+ * @params libtrace_packet_t meta packet.
+ * @returns Pointer to libtrace_meta_t structure containing all found interface mac
+ * addresses or NULL.
+ */
 DLLEXPORT libtrace_meta_t *trace_get_interface_mac_meta(libtrace_packet_t *packet);
 
+/* Get the interface MAC address for a meta packet.
+ * Note: ERF packets can contain multiple interfaces per meta packet. Use index to
+ * specify the interface index.
+ *
+ * @params libtrace_packet_t meta packet to extract the MAC address from.
+ * @params A pointer to a character buffer to store the MAC address in.
+ * @params The size of the buffer passed in.
+ * @params The interface index within the meta packet.
+ * @returns Pointer to the character buffer containing the MAC address or NULL.
+ */
 DLLEXPORT char *trace_get_interface_mac(libtrace_packet_t *packet, char *space, int spacelen,
         int index);
 
+/* Get the interface speed/s from a meta packet.
+ * Must be destroyed with trace_destroy_meta().
+ *
+ * @params libtrace_packet_t packet.
+ * @returns Pointer to libtrace_meta_t structure containing all found interface
+ * speeds or NULL.
+ */
 DLLEXPORT libtrace_meta_t *trace_get_interface_speed_meta(libtrace_packet_t *packet);
 
+/* Get the interface speed for a meta packet.
+ * Note: ERF packets can contain multiple interfaces per meta packet. Use index to
+ * specify the interface index.
+ *
+ * @params libtrace_packet_t meta packet to extract the interface speed from.
+ * @params The interface index within the meta packet.
+ * @returns uint64_t interface speed or NULL.
+ */
 DLLEXPORT uint64_t trace_get_interface_speed(libtrace_packet_t *packet, int index);
 
-
+/* Get the interface ipv4 address/s for a meta packet.
+ * Must be destroyed with trace_destroy_meta().
+ *
+ * @params libtrace_packet_t meta packet.
+ * @returns Pointer to libtrace_meta_t structure containing all found ipv4 addresses
+ * or NULL
+ */
 DLLEXPORT libtrace_meta_t *trace_get_interface_ipv4_meta(libtrace_packet_t *packet);
 
+/* Get the interface ipv4 address for a meta packet.
+ * Note: ERF packets can contain multiple interfaces per meta packet. Use index to
+ * specify the interface index.
+ *
+ * @params libtrace_packet_t meta packet to extract the ipv4 address from.
+ * @params The interface index within the meta packet.
+ * @returns uint32_t ipv4 address or 0.
+ */
 DLLEXPORT uint32_t trace_get_interface_ipv4(libtrace_packet_t *packet, int index);
 
-DLLEXPORT char *trace_get_interface_ipv4_string(libtrace_packet_t *packet, int index);
+/* Get the interface ipv4 address string for a meta packet.
+ * Note: ERF packets can contain multiple interfaces per meta packet. Use index to
+ * specify the interface index.
+ *
+ * @params libtrace_packet_t meta packet to extract the ipv4 address from.
+ * @params A pointer to a character buffer to store the ipv4 address string in.
+ * @params The size of the buffer passed in.
+ * @params The interface index within the meta packet.
+ * @returns Pointer to the character buffer containing the ipv4 address string or NULL.
+ */
+DLLEXPORT char *trace_get_interface_ipv4_string(libtrace_packet_t *packet, char* space, int spacelen,
+	int index);
 
+/* Get the interface ipv6 address/s for a meta packet.
+ * Must be destroyed with trace_destroy_meta().
+ *
+ * @params libtrace_packet_t meta packet.
+ * @returns Pointer to libtrace_meta_t structure containing all found ipv6 addresses
+ * or NULL.
+ */
 DLLEXPORT libtrace_meta_t *trace_get_interface_ipv6_meta(libtrace_packet_t *packet);
 
+/* Get the interface ipv6 address for a meta packet.
+ * Note: ERF packets can contain multiple interfaces per meta packet. Use index to
+ * specify the interface index.
+ *
+ * @params libtrace_packet_t meta packet to extract the ipv6 address from.
+ * @params A pointer to a character buffer to store the ipv6 address in.
+ * @params The size of the buffer passed in.
+ * @params The interface index within the meta packet.
+ * @returns Pointer to the buffer containing the ipv6 address or NULL.
+ */
 DLLEXPORT void *trace_get_interface_ipv6(libtrace_packet_t *packet, void *space, int spacelen,
 	int index);
 
+/* Get the interface ipv6 address string for a meta packet.
+ * Note: ERF packets can contain multiple interfaces per meta packet. Use index to
+ * specify the interface index.
+ *
+ * @params libtrace_packet_t meta packet to extract the ipv6 address from.
+ * @params A pointer to a character buffer to store the ipv6 address in.
+ * @params The size of the buffer passed in.
+ * @params The interface index within the meta packet.
+ * @returns Pointer to the character buffer containing the ipv6 address string or NULL.
+ */
 DLLEXPORT char *trace_get_interface_ipv6_string(libtrace_packet_t *packet, char *space, int spacelen,
 	int index);
 
+/* Get the interface description/s for a meta packet.
+ * Must be destroyed with trace_destroy_meta().
+ *
+ * @params libtrace_packet_t meta packet.
+ * @returns Pointer to libtrace_meta_t structure containing all found interface
+ * descriptions or NULL.
+ */
 DLLEXPORT libtrace_meta_t *trace_get_interface_description_meta(libtrace_packet_t *packet);
 
+/* Get the interface description for a meta packet.
+ * Note: ERF packets can contain multiple interfaces per meta packet. Use index to
+ * specify the interface index.
+ *
+ * @params libtrace_packet_t meta packet to extract the interface description from.
+ * @params A pointer to a character buffer to store the interface description in.
+ * @params The size of the buffer passed in.
+ * @params The interface index within the meta packet.
+ * @returns Pointer to the character buffer containing the interface description or NULL.
+ */
 DLLEXPORT char *trace_get_interface_description(libtrace_packet_t *packet, char *space, int spacelen,
-
 	int index);
 
+/* Get the host OS for a meta packet.
+ * Must be destroyed with trace_destroy_meta().
+ *
+ * @params libtrace_packet_t meta packet.
+ * @returns Pointer to libtrace_meta_t structure containing the host OS or NULL.
+ */
 DLLEXPORT libtrace_meta_t *trace_get_host_os_meta(libtrace_packet_t *packet);
 
+/* Get the host OS for a meta packet.
+ *
+ * @params libtrace_packet_t meta packet to extract the host OS from.
+ * @params A pointer to a character buffer to store the host OS in.
+ * @params The size of the buffer passed in.
+ * @returns Pointer to the character buffer containing the host OS or NULL.
+ */
 DLLEXPORT char *trace_get_host_os(libtrace_packet_t *packet, char *space, int spacelen);
 
+/* Get the interface frame check sequence length for a meta packet.
+ * Must be destroyed with trace_destroy_meta().
+ *
+ * @params libtrace_packet_t meta packet.
+ * @returns Pointer to libtrace_meta_t structure containing all found frame check
+ * sequence lengths or NULL.
+ */
 DLLEXPORT libtrace_meta_t *trace_get_interface_fcslen_meta(libtrace_packet_t *packet);
 
+/* Get the interface frame check sequence length for a meta packet.
+ * Note: ERF packets can contain multiple interfaces per meta packet. Use index to
+ * specify the interface index.
+ *
+ * @params libtrace_packet_t meta packet to extract the interface fcslen from.
+ * @params The interface index within the meta packet.
+ * @returns uint32_t frame check sequence length or 0.
+ */
 DLLEXPORT uint32_t trace_get_interface_fcslen(libtrace_packet_t *packet, int index);
 
+/* Get any interface comments for a meta packet
+ * Must be destroyed with trace_destroy_meta()
+ *
+ * @params libtrace_packet_t packet
+ * @returns Pointer to libtrace_meta_t structure or NULL
+ */
 DLLEXPORT libtrace_meta_t *trace_get_interface_comment_meta(libtrace_packet_t *packet);
 
+/* Get the interface comment for a meta packet.
+ * Note: ERF packets can contain multiple interfaces per meta packet. Use index to
+ * specify the interface ID.
+ *
+ * @params libtrace_packet_t meta packet to extract the interface comment from.
+ * @params A pointer to a character buffer to store the interface description in.
+ * @params The size of the buffer passed in.
+ * @params The interface number within the meta packet.
+ * @returns Pointer to the character buffer containing the hardware description or NULL.
+ */
 DLLEXPORT char *trace_get_interface_comment(libtrace_packet_t *packet, char *space, int spacelen,
 	int index);
 
+/* Get the capture application for a meta packet
+ * Must be destroyed with trace_destroy_meta()
+ *
+ * @params libtrace_packet_t packet
+ * @returns Pointer to libtrace_meta_t structure or NULL
+ */
 DLLEXPORT libtrace_meta_t *trace_get_capture_application_meta(libtrace_packet_t *packet);
 
+/* Get the capture application for a meta packet.
+ *
+ * @params libtrace_packet_t meta packet to extract the application name from.
+ * @params A pointer to a character buffer to store the application name in.
+ * @params The size of the buffer passed in.
+ * @returns Pointer to the character buffer containing the application name or NULL.
+ */
 DLLEXPORT char *trace_get_capture_application(libtrace_packet_t *packet, char *space, int spacelen);
 
+/* Get a meta section option from a meta packet
+ * Must be destroyed with trace_destroy_meta()
+ *
+ * @params libtrace_packet_t packet
+ * @params Section code
+ * @params Option code
+ * @returns Pointer to libtrace_meta_t structure or NULL
+ */
 DLLEXPORT libtrace_meta_t *trace_get_section_option(libtrace_packet_t *packet, uint32_t section_code,
         uint16_t option_code);
 
+/* Get a section from a meta packet
+ * Must be destroyed with trace_destroy_meta()
+ *
+ * @params libtrace_packet_t packet
+ * @params Section code
+ * @returns Pointer to libtrace_meta_t structure or NULL
+ */
 DLLEXPORT libtrace_meta_t *trace_get_section(libtrace_packet_t *packet, uint32_t section_code);
 
+/* Get the DAG card model from a meta packet.
+ *
+ * @params libtrace_packet_t meta packet to extract the DAG model from.
+ * @params A pointer to a character buffer to store the DAG model in.
+ * @params The size of the buffer passed in.
+ * @returns Pointer to the character buffer containing the DAG model or NULL.
+ */
 DLLEXPORT char *trace_get_erf_dag_card_model(libtrace_packet_t *packet, char *space,
 	int spacelen);
 
+/* Get the host DAG software version for a meta packet.
+ *
+ * @params libtrace_packet_t meta packet to extract the hosts DAG verion from.
+ * @params A pointer to a character buffer to store the DAG version in.
+ * @params The size of the buffer passed in.
+ * @returns Pointer to the character buffer containing the DAG version or NULL.
+ */
 DLLEXPORT char *trace_get_erf_dag_version(libtrace_packet_t *packet, char *space,
 	int spacelen);
 
+/* Get the firmware version for a DAG module from a meta packet.
+ *
+ * @params libtrace_packet_t meta packet to extract the FW version from.
+ * @params A pointer to a character buffer to store the FW version in.
+ * @params The size of the buffer passed in.
+ * @returns Pointer to the character buffer containing the FW version or NULL.
+ */
 DLLEXPORT char *trace_get_erf_dag_fw_version(libtrace_packet_t *packet, char *space,
 	int spacelen);
 
