--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -415,6 +415,7 @@ typedef enum {
        TRACE_TYPE_ERF_META = 21, /**< ERF Provenance metadata record */
        TRACE_TYPE_ETSILI = 22,	/**< ETSI Lawful Intercept */
        TRACE_TYPE_PCAPNG_META = 23,	/** PCAPNG meta packet */
+       TRACE_TYPE_TZSP = 24,		/** TZSP Live packets */
 } libtrace_linktype_t;
 
 /** RT protocol base format identifiers.
@@ -444,6 +445,7 @@ enum base_format_t {
         TRACE_FORMAT_DPDK_NDAG       =20,    /**< DAG multicast over a network, received via DPDK */
         TRACE_FORMAT_ETSILIVE     =21,  /**< ETSI LI over a network */
 	TRACE_FORMAT_UNKNOWN      =22,  /** Unknown format */
+	TRACE_FORMAT_TZSPLIVE	  =23,  /** TZSP */
 };
 
 /** RT protocol packet types */
@@ -501,6 +503,8 @@ typedef enum {
 	TRACE_RT_DATA_DPDK=TRACE_RT_DATA_SIMPLE+TRACE_FORMAT_DPDK,
 
         TRACE_RT_DATA_ETSILI = TRACE_RT_DATA_SIMPLE + TRACE_FORMAT_ETSILIVE,
+
+	TRACE_RT_DATA_TZSP = TRACE_RT_DATA_SIMPLE + TRACE_FORMAT_TZSPLIVE,
 
 	/** As PCAP does not store the linktype with the packet, we need to 
 	 * create a separate RT type for each supported DLT, starting from
