Replaced trace_get_section() with trace_get_all_metadata()
Getting the meta-data for each section individually doesn't
really make sense from a user standpoint. First, not all meta-data
records have multiple sections (ERF does, pcap-ng doesn't). Second,
future formats that support meta-data may not have any concept of
sections at all (and arguably pcap-ng doesn't even now) so the
name of the function to use may not be obvious.

So now we have trace_get_all_metadata() which is functionally
similar, but doesn't care about different sections (the section for
each meta-data field is stored with the individual item, just in
case you do need it). You call it and you get a libtrace_meta_t *
with all of the encapsulated meta-data fields from the packet in it.

This is conceptually easier to understand and requires less
format-specific knowledge on the part of the user.

Other related changes in this commit:
 * Renamed trace_get_section_option() to
   trace_get_single_meta_field(), again to make it more obvious
   what the function does.
 * Added ERF_PROV_GEN_TIME to the list of parseable ERF provenance
   fields.
 * Updated libpacketdump link_21 and link_23 modules to use
   trace_get_all_metadata() instead of trace_get_section().

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -632,6 +632,7 @@ typedef enum {
 } libtrace_meta_datatype_t;
 
 typedef struct libtrace_meta_item {
+	uint16_t section;
         uint16_t option;
 	char *option_name;
         uint16_t len;
@@ -640,7 +641,6 @@ typedef struct libtrace_meta_item {
 } libtrace_meta_item_t;
 
 typedef struct libtrace_meta_section {
-	uint16_t section;
 	uint16_t num;
 	libtrace_meta_item_t *items;
 } libtrace_meta_t;
@@ -4042,25 +4042,24 @@ DLLEXPORT libtrace_meta_t *trace_get_capture_application_meta(libtrace_packet_t 
  */
 DLLEXPORT char *trace_get_capture_application(libtrace_packet_t *packet, char *space, int spacelen);
 
-/* Get a meta section option from a meta packet
+/* Get a single specific meta-data field from a meta packet
  * Must be destroyed with trace_destroy_meta()
  *
- * @params libtrace_packet_t packet
- * @params Section code
- * @params Option code
+ * @params packet               The meta packet to extract the option from
+ * @params section_code         The section that the required option is found in
+ * @params option_code          The code for the required option
  * @returns Pointer to libtrace_meta_t structure or NULL
  */
-DLLEXPORT libtrace_meta_t *trace_get_section_option(libtrace_packet_t *packet, uint32_t section_code,
-        uint16_t option_code);
+DLLEXPORT libtrace_meta_t *trace_get_single_meta_field(
+        libtrace_packet_t *packet, uint32_t section_code, uint16_t option_code);
 
-/* Get a section from a meta packet
+/* Parses all meta-data fields within a meta packet
  * Must be destroyed with trace_destroy_meta()
  *
  * @params libtrace_packet_t packet
- * @params Section code
  * @returns Pointer to libtrace_meta_t structure or NULL
  */
-DLLEXPORT libtrace_meta_t *trace_get_section(libtrace_packet_t *packet, uint32_t section_code);
+DLLEXPORT libtrace_meta_t *trace_get_all_metadata(libtrace_packet_t *packet);
 
 /* Get the DAG card model from a meta packet.
  *
