Add compress type option values for zstd and lz4
These formats have been in wandio for a while, but we needed
option values available in libtrace.h for people to be able to
use them easily.

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -1530,7 +1530,9 @@ typedef enum {
 	TRACE_OPTION_COMPRESSTYPE_ZLIB = 1, /**< GZip Compression */
 	TRACE_OPTION_COMPRESSTYPE_BZ2  = 2, /**< BZip2 Compression */
 	TRACE_OPTION_COMPRESSTYPE_LZO  = 3,  /**< LZO Compression */
-	TRACE_OPTION_COMPRESSTYPE_LZMA  = 4,  /**< LZO Compression */
+	TRACE_OPTION_COMPRESSTYPE_LZMA  = 4,  /**< LZMA Compression */
+	TRACE_OPTION_COMPRESSTYPE_ZSTD  = 5,  /**< zstd Compression */
+	TRACE_OPTION_COMPRESSTYPE_LZ4  = 6,  /**< lz4 Compression */
         TRACE_OPTION_COMPRESSTYPE_LAST
 } trace_option_compresstype_t;
 
