--- a/libpacketdump/Makefile.am
+++ b/libpacketdump/Makefile.am
@@ -194,7 +194,7 @@ AM_CPPFLAGS= @ADD_INCLS@ -I../lib
 # a shared library.
 libpacketdump_la_LIBADD = @LIBPKTDUMP_LIBS@ 
 libpacketdump_la_LDFLAGS=\
-        -version-info @LIBTRACE_MAJOR@:@LIBTRACE_MINOR@:@LIBTRACE_MID@ \
+        -version-info 5:0:0 \
         @ADD_LDFLAGS@
 
 AM_CXXFLAGS=-g -Wall -DDIRNAME=\"$(plugindir)\" $(AM_CPPFLAGS)
