--- a/debian/control
+++ b/debian/control
@@ -79,7 +79,7 @@ Description: development headers for the libpacketdump library
 Package: libpacketdump4
 Section: libs
 Architecture: any
-Depends: libtrace4-core (= ${binary:Version}) ${shlibs:Depends}, ${misc:Depends}
+Depends: libtrace4-core (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Provides: libpacketdump
 Conflicts: libpacketdump, libpacketdump3
 Replaces: libpacketdump3
