--- a/debian/rules
+++ b/debian/rules
@@ -19,23 +19,23 @@ CONFIGURE_ARGS = -- --prefix=/usr --with-dpdk=yes \
 override_dh_auto_configure:
 	mkdir -p debian/build debian/build-dag
 	tar -cf - --exclude=debian/build* . | tar -xf - -C debian/build
-	tar -cf - --exclude=debian/build* . | tar -xf - -C debian/build-dag
+#       tar -cf - --exclude=debian/build* . | tar -xf - -C debian/build-dag
 	
 	cd debian/build && ./bootstrap.sh && \
                 dh_auto_configure ${CONFIGURE_ARGS} --with-dag=no
-	cd debian/build-dag && ./bootstrap.sh && \
-                dh_auto_configure ${CONFIGURE_ARGS} --with-dag=yes
+#	cd debian/build-dag && ./bootstrap.sh && \
+#                dh_auto_configure ${CONFIGURE_ARGS} --with-dag=yes
 
 override_dh_auto_build:
 	cd debian/build && dh_auto_build
-	cd debian/build-dag && dh_auto_build
+#	cd debian/build-dag && dh_auto_build
 
 override_dh_install:
 	${MAKE} -C debian/build \
                 DESTDIR=$(shell pwd)/debian/tmp install
-	${MAKE} -C debian/build-dag \
-                DESTDIR=$(shell pwd)/debian/tmp-dag install
-	dh_install -plibtrace4-dag --sourcedir=debian/tmp-dag
+#	${MAKE} -C debian/build-dag \
+#                DESTDIR=$(shell pwd)/debian/tmp-dag install
+#	dh_install -plibtrace4-dag --sourcedir=debian/tmp-dag
 	dh_install -plibtrace4 -plibtrace4-dev -plibpacketdump4 \
                 -plibpacketdump4-dev -plibtrace4-tools \
                 --sourcedir=debian/tmp
