--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -114,6 +114,20 @@ build-amd64-ubuntu-disco:
   only:
     - tags
 
+build-amd64-ubuntu-eoan:
+  stage: build
+  image: ubuntu:eoan
+  script:
+    - ./gitlab-build.sh
+    - mkdir -p built-packages/eoan/
+    - mv ../*.deb built-packages/eoan/
+  artifacts:
+    paths:
+      - built-packages/*
+    expire_in: 1 day
+  only:
+    - tags
+
 build-amd64-fedora-29:
   stage: build
   image: fedora:29
@@ -142,13 +156,27 @@ build-amd64-fedora-30:
   only:
     - tags
 
-build-amd64-centos7:
+build-amd64-fedora-31:
   stage: build
-  image: centos:7
+  image: fedora:31
   script:
-    - ./gitlab-build-rpm.sh centos7
-    - mkdir -p built-packages/centos_7/
-    - mv ~/rpmbuild/RPMS/x86_64/*.rpm built-packages/centos_7/
+    - ./gitlab-build-rpm.sh fedora31
+    - mkdir -p built-packages/fedora_31/
+    - mv ~/rpmbuild/RPMS/x86_64/*.rpm built-packages/fedora_31/
+  artifacts:
+    paths:
+      - built-packages/*
+    expire_in: 1 day
+  only:
+    - tags
+
+build-amd64-centos8:
+  stage: build
+  image: centos:8
+  script:
+    - ./gitlab-build-rpm.sh centos8
+    - mkdir -p built-packages/centos_8/
+    - mv ~/rpmbuild/RPMS/x86_64/*.rpm built-packages/centos_8/
   artifacts:
     paths:
       - built-packages/*
