Add support for nDAG Corsaro-tagged packets
These are captured packets that have been wrapped in a meta-data
header by corsaro, which contains info such as geo-location and
source ASN for the packet's source IP address.

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -416,6 +416,7 @@ typedef enum {
        TRACE_TYPE_ETSILI = 22,	/**< ETSI Lawful Intercept */
        TRACE_TYPE_PCAPNG_META = 23,	/** PCAPNG meta packet */
        TRACE_TYPE_TZSP = 24,		/** TZSP Live packets */
+       TRACE_TYPE_CORSAROTAG = 25,      /** Corsaro tagged packets */
 } libtrace_linktype_t;
 
 /** RT protocol base format identifiers.
@@ -446,6 +447,7 @@ enum base_format_t {
         TRACE_FORMAT_ETSILIVE     =21,  /**< ETSI LI over a network */
 	TRACE_FORMAT_UNKNOWN      =22,  /** Unknown format */
 	TRACE_FORMAT_TZSPLIVE	  =23,  /** TZSP */
+        TRACE_FORMAT_CORSAROTAG   =24,  /** Corsarotagger format */
 };
 
 /** RT protocol packet types */
@@ -505,6 +507,8 @@ typedef enum {
         TRACE_RT_DATA_ETSILI = TRACE_RT_DATA_SIMPLE + TRACE_FORMAT_ETSILIVE,
 	/** RT is encapsulating a tzsplive capture record */
 	TRACE_RT_DATA_TZSP = TRACE_RT_DATA_SIMPLE + TRACE_FORMAT_TZSPLIVE,
+	/** RT is encapsulating a packet tagged by corsarotagger */
+	TRACE_RT_DATA_CORSARO_TAGGED = TRACE_RT_DATA_SIMPLE + TRACE_FORMAT_CORSAROTAG,
 
 	/** As PCAP does not store the linktype with the packet, we need to 
 	 * create a separate RT type for each supported DLT, starting from
