Fix linking libtrace against the system DPDK library
See comment in changes

--- a/configure.in
+++ b/configure.in
@@ -515,18 +515,6 @@ AC_ARG_WITH(dpdk,
 libtrace_dpdk=false
 if test "$want_dpdk" != no; then
 
-        PKG_CHECK_MODULES([DPDK], [libdpdk >= 18], [pkgconf_dpdk_found="yes"],
-                [pkgconf_dpdk_found="no"])
-        if test "x$pkgconf_dpdk_found" = "xyes"; then
-                LIBTRACE_LIBS="$LIBTRACE_LIBS $DPDK_LIBS"
-                ADD_INCLS="$ADD_INCLS $DPDK_CFLAGS"
-                AC_MSG_NOTICE([Building against system DPDK])
-                dpdk_found=pkgconfig
-        else
-                dpdk_found=0
-        fi
-
-
 	# So instead simply check for existence
 	if test "$dpdk_found" = 0 -a "$RTE_SDK" != ""; then
 		AC_CHECK_FILE("$RTE_SDK/$RTE_TARGET/lib/libdpdk.so", dpdk_found="dpdk", dpdk_found=0)
@@ -549,6 +537,42 @@ if test "$want_dpdk" != no; then
 		LIBTRACE_LIBS="$LIBTRACE_LIBS -Wl,--whole-archive -Wl,-l$dpdk_found -Wl,--no-whole-archive -Wl,-lm"
 
 	fi
+
+	# Find the DPDK system package
+	# We do this last to allow RTE_SDK to override the system library
+	#
+	# Dynamic linking against the system's version of DPDK is never easy:
+	#
+	# 1) On Ubuntu the linker has --as-needed set by default, this means
+	# any library which libtrace doesn't directly reference a method from
+	# is not listed as a dependency to libtrace.so. This causes problems
+	# for DPDK, DPDK uses .init or .ctors to patch drivers etc into its
+	# global structures. So libraries need to be loaded simply to register
+	# themselves.
+	#
+	# 2) The answer to this is --no-as-needed, a positional argument, which
+	# applies to all following arguments/libs. However, libtool *helpfully*
+	# reorganises the arguments we give it before giving them to the linker.
+	# To avoid this we need to prefix all libraries with -Wl,-lxxx, so
+	# libtool leaves them be.
+	# Hence the ugly sed hack, TODO find something nicer.
+	#
+	# 3) The package-cfg for Ubuntu 20.02 (DPDK 19.11) is wrong for dynamic
+	# libraries and is missing important libraries like rte_bus_pci,
+	# without which we cannot load PCI devices.
+	# So we always use PKG_CHECK_MODULES_STATIC here, even for dynamic linking.
+	#
+        PKG_CHECK_MODULES_STATIC([DPDK], [libdpdk >= 18], [pkgconf_dpdk_found="yes"],
+                [pkgconf_dpdk_found="no"])
+        if test "x$pkgconf_dpdk_found" = "xyes"; then
+                LIBTRACE_LIBS="$LIBTRACE_LIBS -Wl,--no-as-needed $(echo $DPDK_LIBS | sed 's/ -l/ -Wl,-l/g')"
+		AC_MSG_NOTICE([LIBS = $DPDK_LIBS])
+                ADD_INCLS="$ADD_INCLS $DPDK_CFLAGS"
+                AC_MSG_NOTICE([Building against system DPDK])
+                dpdk_found=pkgconfig
+        else
+                dpdk_found=0
+        fi
 
 	if test "$dpdk_found" = 0 -a "$RTE_SDK" = ""; then
 		AC_MSG_NOTICE([No RTE_SDK given, checking for system dpdk-dev package])
