Cleanup autoconf script

--- a/configure.in
+++ b/configure.in
@@ -215,8 +215,26 @@ AC_CHECK_LIB(yaml, yaml_parser_initialize, yamlfound=1, yamlfound=0)
 AC_CHECK_LIB(tasn1, asn1_array2tree, asn1found=1, asn1found=0)
 
 # Check for AF_XDP required libs
-AC_CHECK_LIB(bpf, xsk_socket__create, bpffound=1, bpffound=0)
-AC_CHECK_LIB(elf, elf_begin, elffound=1, elffound=0)
+AC_ARG_WITH(xdp,AS_HELP_STRING(--with-xdp,include XDP capture support),
+[
+	AC_CHECK_LIB(elf, elf_begin, elffound=1, elffound=0)
+        if test "$elffound" = 1; then
+                AC_DEFINE(HAVE_ELF, 1, [Set to 1 if libelf is available])
+                LIBTRACE_LIBS="$LIBTRACE_LIBS -lelf"
+        else
+                AC_MSG_ERROR(libelf library and header files not found but are required for XDP support)
+        fi
+
+	AC_CHECK_LIB(bpf, xsk_socket__create, bpffound=1, bpffound=0, -lelf)
+        if test "$bpffound" = 1; then
+		AC_DEFINE(HAVE_LIBBPF, 1, [Set to 1 if libbpf is available])
+		LIBTRACE_LIBS="$LIBTRACE_LIBS -lbpf"
+		libtrace_xdp=true
+	else
+		libtrace_xdp=false
+		AC_MSG_ERROR(libbpf library and header files not found but are required for XDP support)
+        fi
+],[])
 
 # Check for libpcap
 AC_CHECK_LIB(pcap,pcap_next_ex,pcapfound=1,pcapfound=0)
@@ -478,22 +496,6 @@ else
         have_yaml=no
 fi
 
-if test "$bpffound" = 1; then
-        AC_DEFINE(HAVE_LIBBPF, 1, [Set to 1 if libbpf is available])
-        LIBTRACE_LIBS="$LIBTRACE_LIBS -lbpf"
-        have_bpf=yes
-else
-        have_bpf=no
-fi
-
-if test "$elffound" = 1; then
-        AC_DEFINE(HAVE_ELF, 1, [Set to 1 if libelf is available])
-        LIBTRACE_LIBS="$LIBTRACE_LIBS -lelf"
-        have_elf=yes
-else
-        have_elf=no
-fi
-
 if test "$have_nsl" = 1; then
 	if test "$ac_cv_search_inet_ntop" != "none required"; then
 		LIBTRACE_LIBS="$LIBTRACE_LIBS $ac_cv_search_inet_ntop"
@@ -535,8 +537,8 @@ AC_ARG_WITH(dpdk,
 libtrace_dpdk=false
 if test "$want_dpdk" != no; then
 
-        PKG_CHECK_MODULES([DPDK], [libdpdk >= 18], [pkgconf_dpdk_found="yes"],
-                [pkgconf_dpdk_found="no"])
+        #PKG_CHECK_MODULES([DPDK], [libdpdk >= 18], [pkgconf_dpdk_found="yes"],
+        #        [pkgconf_dpdk_found="no"])
         if test "x$pkgconf_dpdk_found" = "xyes"; then
                 LIBTRACE_LIBS="$LIBTRACE_LIBS $DPDK_LIBS"
                 ADD_INCLS="$ADD_INCLS $DPDK_CFLAGS"
@@ -702,8 +704,7 @@ AM_CONDITIONAL([HAVE_YAML], [test "x$have_yaml" != "xno"])
 
 AM_CONDITIONAL([HAVE_DPDK_PKGCONFIG], [test "x$dpdk_found" = "xpkgconfig"])
 
-AM_CONDITIONAL([HAVE_LIBBPF], [test "x$have_bpf" != "xno"])
-AM_CONDITIONAL([HAVE_LIBELF], [test "x$have_elf" != "xno"])
+AM_CONDITIONAL([HAVE_LIBBPF], [test "x$libtrace_xdp" = "xtrue"])
 
 # Check for miscellaneous programs
 AC_CHECK_PROG([libtrace_doxygen], [doxygen], [true], [false])
@@ -766,6 +767,12 @@ else
 	AC_MSG_NOTICE([Compiled with DAG live capture support: No])
 fi
 
+if test x"$libtrace_xdp" = xtrue; then
+	AC_MSG_NOTICE([Compiled with XDP capture support: Yes])
+else
+	AC_MSG_NOTICE([Compiled with XDP capture support: No])
+fi
+
 if test x"$libtrace_dpdk" = xtrue; then
 	AC_MSG_NOTICE([Compiled with DPDK live capture support: Yes])
 	reportopt "Compiled with DPDK trace NUMA support" $with_numa
@@ -787,6 +794,7 @@ reportopt "Building traceanon (requires libyaml)" $have_yaml
 if test x"$have_yaml" = xyes; then
     reportopt "Building traceanon with CryptoPan (requires libcrypto and openssl/evp.h)" $have_crypto
 fi
+
 
 # Report any errors relating to missing bison, flex, etc.
 echo 
