Fix linking error with libelf, fix missing submodule URL, disable BPF if compiled with XDP support

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libwandder"]
 	path = libwandder
 	url = https://github.com/wanduow/libwandder
+[submodule "libbpf"]
+        path = libbpf
+        url = https://github.com/libbpf/libbpf
