--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -66,7 +66,7 @@ ETSISOURCES=
 endif
 
 if HAVE_LIBBPF
-XDP_SOURCES=format_linux_xdp.c
+XDP_SOURCES=format_linux_xdp.c format_linux_xdp.h
 else
 XDP_SOURCES=
 endif
@@ -74,6 +74,7 @@ endif
 libtrace_la_SOURCES = trace.c trace_parallel.c common.h \
 		format_pktmeta.c format_erf.c format_pcap.c format_legacy.c \
 		format_rt.c format_helper.c format_helper.h format_pcapfile.c \
+		$(XDP_SOURCES) \
 		format_duck.c format_tsh.c $(NATIVEFORMATS) $(BPFFORMATS) \
 		format_atmhdr.c format_pcapng.c format_tzsplive.c \
 		libtrace_int.h lt_inttypes.h lt_bswap.h \
@@ -92,8 +93,7 @@ libtrace_la_SOURCES = trace.c trace_parallel.c common.h \
                 data-struct/buckets.c data-struct/simple_circular_buffer.c \
 		combiner_sorted.c combiner_unordered.c \
 		pthread_spinlock.c pthread_spinlock.h \
-		strndup.c format_pcapng.h format_tzsplive.h \
-		$(XDP_SOURCES)
+		strndup.c format_pcapng.h format_tzsplive.h
 
 if DAG2_4
 nodist_libtrace_la_SOURCES = dagopts.c dagapi.c
